# ewan-chat

./: .env  Cargo.toml  README.md  app.yml  cliff.toml  deny.toml  private.pem  public.pem
chat_server/: Cargo.toml  test.rest
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handler/: auth.rs  chat.rs  message.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: mod.rs  user.rs
chat_server/src/utils/: jwt.rs  mod.rs
src/: main.rs
