[workspace]
members = ["chat_server"]
resolver = "2"


license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.82"
axum = { version = "0.8.9", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
    "macros",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.9.0", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "2.0.18"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
