[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"


license = "MIT OR Apache-2.0"


[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
jwt-simple = "0.12.16"
mime_guess = "2.0.4"
serde = { workspace = true }
serde_json = "1.0.116"
serde_yaml = { workspace = true }
sha1 = "0.11.0"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = [
    "compression-full",
    "fs",
    "trace",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.8.0", features = ["v7", "serde"] }

[dev-dependencies]
http-body-util = "0.1.1"
sqlx-db-tester = "0.7.1"
